--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -73,6 +73,11 @@
         android:defaultValue="true" />
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="vibration_on_charge_state_changed"
+        android:title="@string/vibration_on_charge_state_changed_title"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="charging_animation"
         android:title="@string/charging_animation_title"
         android:summary="@string/charging_animation_summary"
