--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -110,34 +110,22 @@
             android:defaultValue="0"
             android:persistent="false" />
 
-    <PreferenceCategory
-        android:key="aspect_ratio_category"
-        android:title="@string/aspect_ratio_category_title">
-
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="aspect_ratio_apps_enabled"
             android:title="@string/aspect_ratio_apps_enabled_title"
             android:summary="@string/aspect_ratio_apps_enabled_summary"
             android:defaultValue="false" />
 
-        <com.bliss.support.preferences.AppMultiSelectListPreference
-            android:dependency="aspect_ratio_apps_enabled"
-            android:key="aspect_ratio_apps_list"
-            android:persistent="false"
-            android:summary="@string/aspect_ratio_apps_list_summary"
-            android:title="@string/aspect_ratio_apps_list_title" />
-
-        <com.bliss.support.preferences.ScrollAppsViewPreference
-            android:dependency="aspect_ratio_apps_enabled"
-            android:key="aspect_ratio_apps_list_scroller"
-            android:persistent="false"
-            android:selectable="false" />
+    <PreferenceCategory
+        android:key="legacylist_applications"
+        android:title="@string/aspect_ratio_category_title"
+        android:dependency="aspect_ratio_apps_enabled">
 
         <Preference
-            android:dependency="aspect_ratio_apps_enabled"
-            android:icon="@drawable/ic_info_outline_24dp"
-            android:persistent="false"
-            android:summary="@string/aspect_ratio_apps_info" />
+            android:key="add_legacylist_packages"
+            android:icon="@drawable/ic_menu_add"
+            android:title="@string/aspect_ratio_apps_list_title"
+            android:summary="@string/aspect_ratio_apps_list_summary" />
     </PreferenceCategory>
 
 </PreferenceScreen>
