--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -49,6 +49,14 @@
             android:entryValues="@array/lockscreen_clock_selection_values"
             android:defaultValue="0" />
 
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="lockscreen_date_selection"
+            android:title="@string/lockscreen_date_selection_title"
+            android:entries="@array/lockscreen_date_selection_entries"
+            android:entryValues="@array/lockscreen_date_selection_values"
+            android:dependency="lockscreen_info"
+            android:defaultValue="0" />
+
          <ListPreference
             android:key="lock_clock_fonts"
             android:title="@string/lock_clock_font_title"
