--- a/res/xml/blissify.xml
+++ b/res/xml/blissify.xml
@@ -60,6 +60,12 @@
           android:fragment="com.blissroms.blissify.fragments.gestures.Gestures"
           android:icon="@drawable/ic_blissify_gestures"/>
 
+      <!-- Notifications -->
+      <Preference
+          android:key="notifications_category"
+          android:title="@string/blissify_notifications_title"
+          android:fragment="com.blissroms.blissify.fragments.notifications.Notifications"/>
+
       <!-- Misc -->
       <Preference
           android:key="misc_category"
