--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -110,6 +110,12 @@
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
         </PreferenceScreen>
 
+        <Preference
+            android:key="carrier_label"
+            android:title="@string/carrier_label_settings_title"
+            android:summary="@string/carrier_label_settings_summary"
+            android:fragment="com.blissroms.blissify.fragments.statusbar.CustomCarrierLabel" />
+
       <Preference
           android:key="advanced_icons"
           android:title="@string/statusbar_advanced_icons"
