--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -841,4 +841,8 @@
     <string name="lockscreen_charging_animation_title">LockScreen Charging animation</string>
     <string name="lockscreen_charging_animation_summary">Display animation on lockscreen when charging</string>
 
+    <!-- Old mobile type icons -->
+    <string name="use_old_mobiletype_title">Small mobile type icon</string>
+    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
+
 </resources>
