--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -20,6 +20,12 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="use_old_mobiletype"
+            android:title="@string/use_old_mobiletype_title"
+            android:summary="@string/use_old_mobiletype_summary"
+            android:defaultValue="false" />
+
     <!-- Status bar bliss logo -->
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_logo"
