--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -37,6 +37,24 @@
         android:summary="@string/notification_guts_kill_app_button_summary"
         android:defaultValue="false" />
 
+    <PreferenceCategory
+        android:key="notification_screen"
+        android:title="@string/notification_screen_title" >
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="pulse_ambient_light"
+            android:title="@string/pulse_ambient_light_title"
+            android:summary="@string/pulse_ambient_light_summary"
+            android:defaultValue="false" />
+
+        <com.bliss.support.colorpicker.ColorPickerPreference
+            android:key="pulse_ambient_light_color"
+            android:title="@string/pulse_ambient_light_color_title"
+            android:persistent="false"
+            android:dependency="pulse_ambient_light"
+            settings:defaultColorValue="0xFF3980FF" />
+    </PreferenceCategory>
+
   <PreferenceCategory
         android:title="@string/breathing_notifications_category" >
 
