--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -934,4 +934,15 @@
     <string name="sb_weather_statusbar">Status bar</string>
     <string name="sb_weather_header">Expanded header</string>
 
+    <!-- QS footer icons -->
+    <string name="qs_footer_title">Footer</string>
+    <string name="qs_footer_settings_title">Settings icon</string>
+    <string name="qs_footer_settings_summary">Display Settings icon in quick settings footer</string>
+    <string name="qs_footer_services_title">Running Services icon</string>
+    <string name="qs_footer_services_summary">Display Running Services icon in quick settings footer</string>
+    <string name="qs_footer_user_title">User switcher icon</string>
+    <string name="qs_footer_user_summary">Display Multi-user switcher icon in quick settings footer</string>
+    <string name="qs_footer_edit_title">Edit icon</string>
+    <string name="qs_footer_edit_summary">Display the tile edit icon in quick settings footer</string>
+
 </resources>
