--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -104,6 +104,35 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="qs_footer"
+        android:title="@string/qs_footer_title" >
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_footer_show_settings"
+            android:title="@string/qs_footer_settings_title"
+            android:summary="@string/qs_footer_settings_summary"
+            android:defaultValue="true" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_footer_show_services"
+            android:title="@string/qs_footer_services_title"
+            android:summary="@string/qs_footer_services_summary"
+            android:defaultValue="false" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_footer_show_user"
+            android:title="@string/qs_footer_user_title"
+            android:summary="@string/qs_footer_user_summary"
+            android:defaultValue="true" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_footer_show_edit"
+            android:title="@string/qs_footer_edit_title"
+            android:summary="@string/qs_footer_edit_summary"
+            android:defaultValue="true" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/battery_options"
         android:icon="@drawable/ic_battery_bar">
 
