--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -367,6 +367,7 @@
     <string name="power_menu_bug_report_title">Bug report</string>
     <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
     <string name="power_menu_lockdown_title">Lockdown</string>
+    <string name="power_menu_emergency_title">Emergency</string>
 
     <string name="camera_double_tap_power_gesture_title">Press power button twice for camera</string>
 
