--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -49,4 +49,10 @@
         android:key="lockdown"
         android:title="@string/power_menu_lockdown_title"
         android:defaultValue="false" />
+
+    <com.bliss.support.preferences.GlobalSettingSwitchPreference
+        android:key="power_menu_emergency_affordance"
+        android:icon="@drawable/ic_emergency"
+        android:title="@string/power_menu_emergency_title"
+        android:defaultValue="true" />
 </PreferenceScreen>
