--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -728,8 +728,8 @@
     <string name="less_boring_heads_up_summary">Show heads up only for dialer, messaging and alarm app</string>
 
     <!-- Hide Statusbar on Lockscreen -->
-    <string name="lockscreen_hide_status_bar_title">Hide status bar</string>
-    <string name="lockscreen_hide_status_bar_summary">Touch status bar to toggle visibility</string>
+    <string name="lockscreen_show_status_bar_title">Show status bar</string>
+    <string name="lockscreen_show_status_bar_summary">Toggles status bar visibility on lock screen</string>
 
     <!-- Notification guts kill app button -->
     <string name="notification_guts_kill_app_button_title">Kill app button</string>
