--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -84,5 +84,20 @@
         android:title="@string/notification_sound_vib_screen_on_title"
         android:summary="@string/notification_sound_vib_screen_on_summary"
         android:defaultValue="true" />
+
+    <PreferenceCategory
+        android:key="incall_vib_options"
+        android:title="@string/incall_noti_category" >
+
+        <!-- Flashlight on incoming calls -->
+        <ListPreference
+            android:key="flashlight_on_call"
+            android:title="@string/flashlight_on_call_title"
+            android:entries="@array/flashlight_on_call_entries"
+            android:entryValues="@array/flashlight_on_call_values"
+            android:summary="%s"
+            android:defaultValue="0" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
 
