--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -462,6 +462,7 @@
     <string name="status_bar_volte_style_5">Oneplus</string>
     <string name="status_bar_volte_style_6">Notch friendly</string>
     <string name="status_bar_volte_style_7">VoLIT Icon</string>
+    <string name="status_bar_volte_style_8">VoLTE Asus Icon</string>
 
     <!-- Data disabled indicator -->
     <string name="data_disabled_icon_title">Data disabled indicator</string>
