--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -926,6 +926,7 @@
         <item>@string/status_bar_volte_style_5</item>
         <item>@string/status_bar_volte_style_6</item>
         <item>@string/status_bar_volte_style_7</item>
+        <item>@string/status_bar_volte_style_8</item>
     </string-array>
 
     <string-array name="status_bar_volte_values" translatable="false">
@@ -937,6 +938,7 @@
         <item>5</item>
         <item>6</item>
         <item>7</item>
+        <item>8</item>
     </string-array>
 
     <!-- QS battery style  -->
