--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -107,11 +107,20 @@
         android:key="qs_footer"
         android:title="@string/qs_footer_title" >
 
+        <!-- QS footer text toggle -->
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="footer_text_show"
             android:title="@string/footer_text_show_title"
             android:summary="@string/footer_text_show_summary"
             android:defaultValue="false" />
+
+        <!-- QS footer text string -->
+        <com.bliss.support.preferences.SystemSettingEditTextPreference
+            android:key="footer_text_string"
+            android:title="@string/footer_text_string_title"
+            android:summary="@string/footer_text_string_summary"
+            android:dependency="footer_text_show"
+            android:defaultValue="#BlissRoms" />
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="qs_footer_show_settings"
