--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -959,5 +959,7 @@
     <!-- QS Footer Text -->
     <string name="footer_text_show_title">Display footer text</string>
     <string name="footer_text_show_summary">Toogle to show custom text on qs footer</string>
+    <string name="footer_text_string_title">Customize footer text</string>
+    <string name="footer_text_string_summary">Set to empty for default #BlissRoms</string> 
 
 </resources>
