--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -67,6 +67,18 @@
             android:summary="@string/pulse_ambient_auto_color_summary"
             android:dependency="pulse_ambient_light"
             android:defaultValue="false" />
+
+        <com.bliss.support.preferences.SystemSettingSeekBarPreference
+            android:key="pulse_ambient_light_duration"
+            android:title="@string/pulse_ambient_light_duration_title"
+            android:summary="@string/pulse_ambient_light_duration_summary"
+            android:persistent="false"
+            android:defaultValue="2"
+            android:max="10"
+            settings:min="1"
+            settings:units="sec"
+            settings:interval="1"
+            android:dependency="pulse_ambient_light" />
     </PreferenceCategory>
 
     <PreferenceCategory
