--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -852,6 +852,8 @@
     <string name="pulse_ambient_light_title">Edge lighting</string>
     <string name="pulse_ambient_light_summary">Light up the side edges of the screen on notification pulse</string>
     <string name="pulse_ambient_light_color_title">Edge light color</string>
+    <string name="pulse_ambient_auto_color_title">Auto color</string>
+    <string name="pulse_ambient_auto_color_summary">Sets edge light color to the primary color of wallpaper</string>
 
     <!-- Hide Apps from Recents -->
     <string name="hafr_category_title">HAFR</string>
