--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -60,6 +60,13 @@
             android:persistent="false"
             android:dependency="pulse_ambient_light"
             settings:defaultColorValue="0xFF3980FF" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="pulse_ambient_auto_color"
+            android:title="@string/pulse_ambient_auto_color_title"
+            android:summary="@string/pulse_ambient_auto_color_summary"
+            android:dependency="pulse_ambient_light"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
