--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -150,7 +150,12 @@
             android:title="@string/incall_vibrate_disconnect_title"
             android:defaultValue="true" />
 
-        <!-- Flashlight on incoming calls -->
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="notification_flash"
+        android:title="@string/notification_flash_title" >
+
         <ListPreference
             android:key="flashlight_on_call"
             android:title="@string/flashlight_on_call_title"
@@ -158,6 +163,12 @@
             android:entryValues="@array/flashlight_on_call_values"
             android:summary="%s"
             android:defaultValue="0" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="flashlight_on_call_waiting"
+            android:title="@string/flashlight_on_call_wait_title"
+            android:summary="@string/flashlight_on_call_wait_summary"
+            android:defaultValue="false" />
 
     </PreferenceCategory>
 </PreferenceScreen>
